# sdmvis

./: README.md  readme.textile
manual/: README.txt
manual/html-help/: qthelp.qhp  qthelpcollection.qhcp  sdmvis-manual.html  sdmvis-manual.tex
manual/images/: labels.pptx
mat/: mattools.cpp  numerics.h  svm.h
sdmproc/: CMakeLists.txt  ImageTools.cpp  Reconstruction.h  StatisticalDeformationModel.h
sdmvis/: BarPlotWidget.h  BatchProcessingDialog.h  CMakeLists.txt  ConfigGenerator.cpp  DatasetWidget.cpp  DatasetWidget.h  LinearLocalCovariance.h  LocalCovarianceStatistics.cpp  LocalCovarianceStatistics.h  Matlab.cpp  OverdrawQGLWidget.cpp  OverdrawQGLWidget.h  OverdrawQVTKWidget2.h  PleaseWaitDialog.h  PlotView.h  SDMTensorDataProvider.cpp  SDMTensorDataProvider.h  SDMTensorOverviewWidget.h  SDMTensorProbe.h  SDMTensorProbeWidget.cpp  SDMTensorProbeWidget.h  SDMTensorVisWidget.cpp  SDMVis Config Notes.txt  SDMVisConfig.cpp  SDMVisInteractiveEditing.cpp  SDMVisInteractiveEditingOptionsWidget.cpp  SDMVisInteractiveEditingOptionsWidget.h  SDMVisMainWindow.cpp  SDMVisMainWindow.h  SDMVisVolumeRenderer.cpp  SDMVisVolumeRenderer.h  Trait.h  TraitComb.cpp  VTKCameraSerializer.cpp  VTKCameraSerializer.h  VTKVisPrimitives.h  VTKVisWidget.h  Vector.h  VolumeManager.cpp  VolumeManager.h  (+3 more)
sdmvis/data/icons/: icon.xcf
sdmvis/dox/: Doxyfile  Doxymain.h
sdmvis/e7/GL/: GLSLProgram.cpp  GLSLProgram.h  RenderToTexture.h
sdmvis/e7/Misc/: FilesystemTools.cpp  FilesystemTools.h
sdmvis/e7/VolumeRendering/: LookupTable.cpp  RayPickingInfo.h  RaycastShader.cpp  RaycastShader.h  VolumeData.cpp  VolumeRendererRaycast.cpp  VolumeRendererRaycast.h  VolumeUtils.cpp
sdmvis/matlab/: loadNames.m  plotPCAClasses.m  plotPCANames.m  plotResultScatterplot.m  plotSVM.m
slvis/: .qglviewer.xml  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PointSamples.cpp  PointSamples.h  StreamlineRenderer.cpp  StreamlineRenderer.h  Viewer.cpp  Viewer.h  VolumeTextureManager.cpp  VolumeTextureManager.h  main.cpp  qglutils.cpp
slvis/shader/: streamline.fs.glsl  streamline.gs.glsl  streamline.vs.glsl
tensorvis/: CMakeLists.txt  ImageDataSpace.cpp  ModeAnimationParameters.h  ModeAnimationWidget.cpp  ModeAnimationWidget.h  QTensorVisOptionsWidget.h  TensorData.h  TensorDataFileProvider.cpp  TensorDataProvider.cpp  TensorDataProvider.h  TensorDataStatistics.h  TensorNormalDistribution.h  TensorNormalDistributionProvider.cpp  TensorNormalDistributionProvider.h  TensorVis2.cpp  TensorVisRenderBase.cpp  TensorVisRenderBase.h  VolVis.h  Warpfields.h  WeightedTensorDataProvider.cpp  WeightedTensorDataProvider.h  qtensorvis.cpp  qtensorvis.qrc  tensordist.cpp  vtkConeSource2.cxx  vtkTensorGlyph3.cxx  vtkTensorGlyph3.h
tensorvis/data/colormaps/: Kindlmann-FA.map  Poettkow-Probability.map
trunk/manual/: sdmvis-manual.lyx
trunk/manual/html-help/: sdmvis-manual.css
trunk/manual/images/: pipeline.pptx
trunk/mat/: CMakeLists.txt  SVMTrain.cpp  SVMTrain.h  mattools.h  numerics.h  rednum.h  svm.cpp
trunk/sdmproc/: ImageTools.h  MetaImageHeader.h  Reconstruction.cpp  StatisticalDeformationModel.cpp  crossvalidate.cpp  imgproc.cpp  sdmproc.cpp
trunk/sdmvis/: BarPlotWidget.cpp  BatchProcessingDialog.cpp  CMakeLists.txt  CSVExporter.cpp  CSVExporter.h  ConfigGenerator.h  EditLocalCovariance.cpp  EditLocalCovariance.h  Geometry2.cpp  Geometry2.h  LinearLocalCovariance.cpp  Matlab.h  OverdrawInterface.h  OverdrawQVTKWidget2.cpp  PleaseWaitDialog.cpp  PlotItem.h  PlotWidget.h  SDMTensorOverviewWidget.cpp  SDMTensorVisWidget.h  SDMVisConfig.h  SDMVisInteractiveEditing.h  SDMVisInteractiveEditingOptionsWidget.h  SDMVisMainWindow.cpp  SDMVisVolumeRenderer.cpp  SDMVisVolumeRenderer.h  ScatterPlotWidget.cpp  ScatterPlotWidget.h  SphereSelection.cpp  SphereSelection.h  TraitComb.h  TraitDialog.cpp  TraitDialog.h  TraitSelectionWidget.cpp  TraitSelectionWidget.h  VTKRayPickerHelper.cpp  VTKRayPickerHelper.h  VTKVisPrimitives.cpp  VTKVisWidget.cpp  main.cpp  plotView.cpp  (+1 more)
trunk/sdmvis/data/icons/: symbols.pptx
trunk/sdmvis/e7/: CMakeLists.txt
trunk/sdmvis/e7/Engines/: Engine.h  Trackball2.cpp  Trackball2.h
trunk/sdmvis/e7/Engines/GLUT/: EngineGLUT.cpp
trunk/sdmvis/e7/GL/: GLSLProgram.cpp  RenderToTexture.cpp
trunk/sdmvis/e7/Misc/: FilesystemTools.cpp
trunk/sdmvis/e7/VolumeRendering/: LookupTable.h  RayPickingInfo.cpp  VolumeData.h  VolumeRendererRaycast.cpp  VolumeRendererRaycast.h
trunk/sdmvis/e7/VolumeRendering/shader/: black-body-radiation.xml  blue-to-yellow.xml  likelihood.xml  raycast.fs.glsl  raycast_default_lookup.table  raycast_default_lookup.xml
trunk/sdmvis/matlab/: plotSVMPlane.m  printPDF.m  scriptSVMAnalysis.m
trunk/slvis/: MainWindow.h  PointSamples.cpp  PointSamples.h  README.txt  StreamlineRenderer.cpp  StreamlineRenderer.h  Viewer.cpp  Viewer.h  main.cpp  qglutils.h  slvis.qrc
trunk/tensorvis/: ColorMapRGB.cpp  ColorMapRGB.h  ImageDataSpace.h  QTensorVisApp.cpp  QTensorVisApp.h  QTensorVisOptionsWidget.cpp  QTensorVisWidget.cpp  QTensorVisWidget.h  TensorData.cpp  TensorDataAdaptor.h  TensorDataFileProvider.h  TensorDataStatistics.cpp  TensorNormalDistribution.cpp  TensorSpectrum.cpp  TensorSpectrum.h  TensorVis.cpp  TensorVis.h  TensorVis2.h  TensorVisBase.cpp  TensorVisBase.h  VolVis.cpp  Warpfields.cpp  qtensorvis.rc  vtkConeSource2.h  vtkGlyph3D_3.cxx  vtkGlyph3D_3.h
trunk/varvis/: CMakeLists.txt  GlyphControls.cpp  GlyphControls.h  GlyphOffsetFilter.cpp  PointSamplerFilter.cpp  PointSamplerFilter.h  RoiControls.h  VarVisRender.cpp  VarVisRender.h  VarVisWidget.h  VectorToMeshColorFilter.cpp  VectorToMeshColorFilter.h  VectorToVertexNormalFilter.cpp  VectorToVertexNormalFilter.h  VectorfieldClustering.cpp  mainwindow.h
varvis/: GlyphControls.cpp  GlyphInvertFilter.cpp  GlyphInvertFilter.h  GlyphOffsetFilter.h  GlyphVisualization.cpp  GlyphVisualization.h  PointSamplerFilter.cpp  README.txt  RoiControls.cpp  VarVisControls.cpp  VarVisWidget.cpp  VectorUtils.h  VectorfieldClustering.cpp  VectorfieldClustering.h  VolumeControls.cpp  VolumeControls.h  mainwindow.cpp  varVisControls.h
(+18 files in other folders)
